--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -74,6 +74,10 @@ jobs:
             args: ''
           - platform: 'windows-latest'
             args: ''
+          # 新增Android平台配置
+          - platform: 'ubuntu-22.04'
+            args: '--target aarch64-linux-android'
+            build-type: 'android'
 
     runs-on: ${{ matrix.platform }}
     steps:
@@ -135,8 +139,8 @@ jobs:
             rm -rf components-typings
           fi
 
-      - name: install dependencies (ubuntu only)
-        if: matrix.platform == 'ubuntu-22.04'
+      - name: install dependencies (ubuntu only - desktop)
+        if: matrix.platform == 'ubuntu-22.04' && !matrix.build-type == 'android'
         run: |
           sudo apt-get update
           sudo apt-get install -y \
@@ -148,6 +152,29 @@ jobs:
             pkg-config \
             libgtk-3-dev \
             libayatana-appindicator3-dev
+
+      # 新增：安装Android构建依赖
+      - name: Install Android build dependencies (ubuntu only - android)
+        if: matrix.build-type == 'android'
+        run: |
+          sudo apt-get update
+          sudo apt-get install -y \
+            openjdk-17-jdk \
+            unzip \
+            lib32z1 \
+            wget \
+            curl
+
+      # 新增：配置Android SDK和NDK
+      - name: Setup Android SDK and NDK
+        if: matrix.build-type == 'android'
+        uses: android-actions/setup-android@v3
+        with:
+          android-sdk-manager-version: 7.0.0
+          android-sdk-build-tools: 34.0.0
+          android-sdk-platforms: android-34
+          android-ndk-version: 25.2.9519653
+          cmake-version: 3.22.1
 
       # 添加环境变量配置
       - name: Set up environment variables
@@ -205,10 +232,28 @@ jobs:
 
       # 安装 Rust
       - name: install Rust stable
-        uses: dtolnay/rust-toolchain@stable # Set this to dtolnay/rust-toolchain@nightly
+        uses: dtolnay/rust-toolchain@stable
         with:
-          # Those targets are only used on macos runners so it's in an `if` to slightly speed up windows and linux builds.
-          targets: ${{ matrix.platform == 'macos-latest' && 'aarch64-apple-darwin,x86_64-apple-darwin' || '' }}
+          # 为macOS添加target，为Android添加aarch64-linux-android target
+          targets: ${{ 
+            matrix.platform == 'macos-latest' && 'aarch64-apple-darwin,x86_64-apple-darwin' || 
+            matrix.build-type == 'android' && 'aarch64-linux-android' || '' 
+          }}
+
+      # 新增：配置Android Rust构建环境
+      - name: Configure Android Rust environment
+        if: matrix.build-type == 'android'
+        run: |
+          # 设置Android NDK路径
+          echo "ANDROID_NDK_ROOT=$ANDROID_HOME/ndk/25.2.9519653" >> $GITHUB_ENV
+          # 配置cargo的Android target
+          rustup target add aarch64-linux-android
+          # 设置Android链接器
+          mkdir -p .cargo
+          cat <<EOF > .cargo/config.toml
+          [target.aarch64-linux-android]
+          linker = "$ANDROID_NDK_ROOT/toolchains/llvm/prebuilt/linux-x86_64/bin/aarch64-linux-android34-clang"
+          EOF
 
       - name: Cache cargo target
         uses: actions/cache@v4
@@ -217,9 +262,9 @@ jobs:
             ${{ runner.os == 'Windows' && env.USERPROFILE || env.HOME }}/.cargo/registry
             ${{ runner.os == 'Windows' && env.USERPROFILE || env.HOME }}/.cargo/git
             src-tauri/target
-          key: cargo-target-${{ matrix.platform }}-${{ hashFiles('src-tauri/Cargo.lock') }}
+          key: cargo-target-${{ matrix.platform }}-${{ matrix.build-type || 'desktop' }}-${{ hashFiles('src-tauri/Cargo.lock') }}
           restore-keys: |
-            cargo-target-${{ matrix.platform }}-
+            cargo-target-${{ matrix.platform }}-${{ matrix.build-type || 'desktop' }}-
 
       - name: Create release
         uses: tauri-apps/tauri-action@v0
@@ -231,8 +276,11 @@ jobs:
           TAURI_SIGNING_PRIVATE_KEY_PASSWORD: ${{ secrets.TAURI_SIGNING_PRIVATE_KEY_PASSWORD }}
           # 增加 Node.js 内存限制，避免构建时内存溢出
           NODE_OPTIONS: --max-old-space-size=4096
+          # Android构建需要的环境变量
+          ANDROID_NDK_ROOT: ${{ env.ANDROID_NDK_ROOT }}
+          ANDROID_HOME: ${{ env.ANDROID_HOME }}
         with:
-          tagName: v__VERSION__ #这个动作会自动将\_\_VERSION\_\_替换为app version
+          tagName: v__VERSION__ #这个动作会自动将__VERSION__替换为app version
           releaseName: 'v__VERSION__'
           releaseBody: 'See the assets to download and install this version.'
           releaseDraft: true
